<resources>
    <string name="app_name">PLV</string>

    <string name="title_inicio">INICIO</string>
    <string name="title_envios">ENVÍOS PENDIENTES</string>
    <string name="download">Carga de contenidos</string>
    <string name="columnas">COLUMNAS</string>
    <string name="columna">COLUMNA</string>
    <string name="galeria">GALERÍA</string>
    <string name="plv">PLV</string>
    <string name="compania">COMPAÑÍA</string>

    <!-- fragment shop product-->
    <string name="borrar_lista">BORRAR LISTA</string>
    <string name="shops_envios">ENVÍO</string>
    <string name="shops_pedidos">PEDIDOS</string>
    <string name="vaciar">VACIAR</string>
    <string name="locales">LOCALES</string>
    <string name="fichas">FICHA</string>
    <string name="enviar">ENVÍAR</string>
    <string name="listado">LISTADO DE PRODUCTOS</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="alert_message">Este producto no se enviará si no añades al menos 1 item</string>

    <!-- Dialogs-->
    <string name="anadir_ficha">AÑADIR FICHA A:</string>
    <string name="anadir_pedido">AÑADIR PEDIDO A:</string>
    <string name="want_continue">ESTA FICHA HA SIDO AÑADIDA</string>
    <string name="no_productos">EL CARRITO ESTÁ VACIO.\nAÑADE AL MENOS UN 1 PRODUCTO</string>
    <string name="button_cancel">CANCELAR</string>
    <string name="button_accept">ACEPTAR</string>
    <string name="ver_envio">VER ENVÍO</string>
    <string name="ver_pedido">VER PEDIDO</string>
    <string name="continuar">CONTINUAR</string>
    <string name="ok">OK</string>
    <string name="check_connection">Compruebe la conexin a Internet por favor</string>
    <string name="want_update">Quiere descargar nuevo contenido ahora?</string>
    <string name="miss_content">Error en la descarga de datos. Reinicie la aplicación para descargar los datos de nuevo.</string>
    <string name="error_connection">Error en el acceso a la información. ¿Desea descargar de nuevo toda la información?</string>

    <!-- Toasts-->
    <string name="enter_shop">Por favor, añade un local</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="delete_shop">Un local eliminado correctamente</string>
    <string name="delete_item">Item eliminado correctamente</string>
    <string name="delete_all_item">All item deleted succesfull</string>
    <string name="delete_all_shop">All shop deleted succesfull</string>
    <string name="add_shop_succesfull">Shop add succesfull</string>
    <string name="attachment_error">Attachment Error</string>
    <string name="error">_error</string>
    <string name="click_back">Por favor, haga clic de nuevo para salir</string>

    <string name="email">ana.pascual@cristaliza.com</string>
    <string name="send_mail">Send email...</string>
    <string name="mail_topic_envio">Envío de fichas de producto</string>
    <string name="mail_message_envio">Buenos días.
        Como hablamos, le envio las fichas de los productos que eligió...</string>
    <string name="mail_topic_pedido">Hoja de pedido</string>
    <string name="mail_message_pedido">Buenos días.
        Como hablamos, le envío el pedido...</string>

    <string name="zero">0</string>

</resources>
